--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
     "isbot": "^4.1.0",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.468.0",
     "next-themes": "^0.4.4",
     "prisma": "^6.0.1",
