--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@remix-run/node": "^2.15.0",
     "@remix-run/react": "^2.15.0",
     "@remix-run/serve": "^2.15.0",
-    "bcrypt": "^5.1.1",
+    "@tanstack/react-table": "^8.20.6",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
